fixed react player, added controls for react player,  fixed issue with chevron overflowing within service accordions

--- a/src/views/Service/CriteriaCard/CriteriaCard.scss
+++ b/src/views/Service/CriteriaCard/CriteriaCard.scss
@@ -6,6 +6,7 @@
   width: 100%;
   padding: space(20);
   background-color: $white;
+  position: relative;
 
   &:nth-of-type(even) {
     background-color: $gray;
